refactor: My custom recipe
Use this link to re-run the recipe: https://app.moderne.io/recipes/builder/mFcj9Fvhd?organizationId=RGVmYXVsdA%3D%3D

Co-authored-by: Moderne <team@moderne.io>