@@ -24,8 +24,8 @@ import org.apache.commons.logging.LogFactory;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.web.servlet.context.ServletWebServerInitializedEvent;
-import org.springframework.cloud.sleuth.Span;
-import org.springframework.cloud.sleuth.Tracer;
+import io.micrometer.tracing.Span;
+import io.micrometer.tracing.Tracer;
 import org.springframework.context.ApplicationListener;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -97,7 +97,7 @@ public class SampleController implements ApplicationListener<ServletWebServerIni
 		log.info("traced");
 		Span span = this.tracer.nextSpan().name("http:customTraceEndpoint");
 		int millis = this.random.nextInt(1000);
-		log.info(String.format("Sleeping for [%d] millis", millis));
+		log.info("Sleeping for [%d] millis".formatted(millis));
 		Thread.sleep(millis);
 		this.tracer.currentSpan().tag("random-sleep-millis", String.valueOf(millis));
 
@@ -110,7 +110,7 @@ public class SampleController implements ApplicationListener<ServletWebServerIni
 	public String start() throws InterruptedException {
 		log.info("start");
 		int millis = this.random.nextInt(1000);
-		log.info(String.format("Sleeping for [%d] millis", millis));
+		log.info("Sleeping for [%d] millis".formatted(millis));
 		Thread.sleep(millis);
 		this.tracer.currentSpan().tag("random-sleep-millis", String.valueOf(millis));
 
